--- a/style.css
+++ b/style.css
@@ -41,3 +41,12 @@ body{
 
   }
 /* Banner end */
+
+
+@media only screen and (max-width: 500px)
+{
+    .overlay{
+        padding-left: 10px;
+        font-size: 0.7em;
+    } 
+}
