--- a/style.css
+++ b/style.css
@@ -4,8 +4,22 @@ body{
 }
 
 .auto-padding{
-    padding: 40px 0px 40px 0px;
+    padding: 50px 0px 50px 0px;
 }
+
+/* Commons start */
+.head{
+    font-size: 1.8em;
+    font-weight: 600;
+    color: #f7920d;
+}
+
+.sub-head{
+    /* font-size: 1.5em; */
+    font-weight: 500;
+    color: #f7920dc2;
+}
+/* Commons end */
 
 
 /* Banner start */
@@ -23,11 +37,18 @@ body{
     text-align:center;
     width: max-content;
     margin: auto;
+
+  }
+
+  .banner-heads{
+    margin: auto;
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
     background-color: #f68121e1;
     padding-left: 150px;
     padding-right: 50px;
+    padding-top: 10px;
+    padding-bottom: 10px;
   }
   
   .logo{
@@ -41,6 +62,13 @@ body{
 
   }
 /* Banner end */
+
+
+/* Section 3 start */
+.sec-3{
+    background-color: #f68121;
+}
+/* Section 3 end */
 
 
 @media only screen and (max-width: 500px)
