--- a/style.css
+++ b/style.css
@@ -299,6 +299,10 @@ body{
         font-size: 0.7em;
     } 
 
+    .banner{
+        height: 60vh;
+    }
+
     .banner-heads{
         padding-left: unset;
         padding-right: unset;
